@@ -347,6 +347,9 @@ val lazy_flatten(val list);
 val memq(val obj, val list);
 val memql(val obj, val list);
 val memqual(val obj, val list);
+val remq(val obj, val list);
+val remql(val obj, val list);
+val remqual(val obj, val list);
 val tree_find(val obj, val tree, val testfun);
 val some_satisfy(val list, val pred, val key);
 val all_satisfy(val list, val pred, val key);
